--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@material-ui/icons": "^5.0.0-beta.1",
 		"@material-ui/lab": "^5.0.0-alpha.41",
 		"@material-ui/styles": "^5.0.0-beta.2",
+		"axios": "^0.21.1",
 		"formik": "^2.2.9",
 		"lodash": "^4.17.21",
 		"next": "^11.0.1",
